# dapps-dao-light

./: CHANGELOG.md  Cargo.toml  Makefile  dao_light.meta.txt
.github/workflows/: build.yml  release.yml
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  ft_messages.rs  io.rs  lib.rs  state.rs  utils.rs
state/: Cargo.toml
state/src/: lib.rs
tests/: dao_simple_test.rs  failures.rs  proposal.rs  utils.rs
