[package]
name = "dao-light"
version = "0.1.1"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
primitive-types = { version = "0.12.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
scale-info = { version = "2.3.0", default-features = false }
ft-io = { git = "https://github.com/gear-dapps/fungible-token.git", tag = "0.1.3" }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
