[package]
name = "dao-light"
version = "0.1.1"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

[dependencies]
# TODO: pin to the "stable" branch before the merge.
gstd = { git = "https://github.com/gear-tech/gear.git" }
dao-light-io = { path = "io" }
ft-io = { git = "https://github.com/gear-dapps/fungible-token.git", branch = "new_meta" }
hashbrown = "0.13.1"

[dev-dependencies]
# TODO: pin to the "stable" branch before the merge.
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
# TODO: pin to the "stable" branch before the merge.
dao-light-io = { path = "io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[features]
# Used for inserting constants with WASM binaries (NOT paths) of the contract in
# the root crate. Usually these constants used in gclient tests instead of
# strings with paths to the binaries in the "target" directory. If you don't
# like this approach or don't use gclient tests, you can freely remove this
# feature from here and from the rest of the code.
binary-vendor = []

# It's necessary to include all metawasm crates in the workspace section,
# otherwise they'll be ignored by Cargo and won't be built.
[workspace]
members = [
    "state"
]