[package]
name = "dao-light-io"
version = "0.1.0"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: pin to the "stable" branch before the merge.
gmeta = { git = "https://github.com/gear-tech/gear.git" }
gstd = { git = "https://github.com/gear-tech/gear.git" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }