[package]
name = "dao-light-state"
version = "0.1.0"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: pin to the "stable" branch before the merge.
gstd = { git = "https://github.com/gear-tech/gear.git" }
gmeta = { git = "https://github.com/gear-tech/gear.git", features = ["codegen"] }
dao-light-io = { path = "../io" }

[build-dependencies]
# TODO: pin to the "stable" branch before the merge.
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", features = ["metawasm"] }